Windows Scrolling Bug Fix
- Made it so that the scrollbar only appears when needed, even on windows

--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,7 @@ label{
     width: 200px;
     height: 100%;
     max-height: 160px;
-    overflow: scroll;
+    overflow: auto;
     list-style-type: none;
     padding-top: 20px;
     padding-bottom: 20px;
